# minimal-amcrest

./: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
minimal_amcrest/: __main__.py  digest.py
