[tool.poetry]
name = "minimal-amcrest"
version = "0.1.0"
description = ""
authors = ["Michael Allan <michael@intrinseca.me.uk>"]
readme = "README.md"
packages = [{include = "minimal_amcrest"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.4"
click = "^8.1.3"
halo = "^0.0.31"
voluptuous = "^0.13.1"
asyncio-mqtt = "^0.16.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
ignore-paths = "minimal_amcrest/digest.py"
